<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wikifish</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Deslogar</string>
    <string name="hello_world">Bem Vindo!</string>
    <string name="login_progress_signing_in">Entrando&#8230;</string>
    <string name="signup_progress_signing_up">Registrando&#8230;</string>
    <string name="title_activity_main_fragment">Bem Vindo!</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="login">Entrar</string>
    <string name="signup">Registrar</string>
    <string name="email">Email</string>
    <string name="username">Login(username)</string>
    <string name="password">Senha</string>
	<string name="login_facebook">Entrar com Facebook</string>
	<string name="login_google">Entrar com Google</string>
	<string name="login_github">Entrar com Github</string>
	
	<string name="facebook_signup">Sign Up with Facebook</string>
	<string name="word_or">Ou</string>
	

    <string name="title_activity_about">Help</string>
    <string name="title_name">Name:</string>
    <string name="title_price">Price:</string>
    <string name="comment_new">Comment New</string>
    <string name="title_scientific_name">Scientific:</string>
    <string name="action_setting">Settings</string>
    <string name="colon">:</string>
    <string name="add_comment">Add comment</string>
    <string name="hint_comment">Put your comment here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear</string>
    <!-- User Strings // -->
    <string name="hint_email">Email</string>
    <string name="hint_password">*****</string>
    <string name="hint_name">Name</string>
    <string name="bt_register">Register</string>
    <string name="bt_login">Login</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_create">Create User</string>
    <string name="action_search">Search</string>
    <string name="title_image_preview">Image Preview</string>

    <!-- \\User Strings -->
    <!-- Helpe Strings// -->
    <string name="title_help_feeding_habits">Feeding Habits</string>
    <string name="title_help_reproduction">Reproduction</string>
    <string name="title_help_aquarium_lighting">Aquarium lighting</string>
    <string name="title_help_temperament">Temperament</string>
    <string name="title_help_aquarium_setup">Aquarium Set-Up</string>
    <string name="title_help_swimming_habits">Swimming Habits</string>
    <string name="title_help_other">Other</string>

    <!-- Connection Infos -->
    <string name="cant_without_connection">Impossivel sem conexão.</string>
    <string name="connection_unavailable">Conexão indisponivel.</string>

    <string-array name="description_feeding_habits">
        <item>Dry, packaged food.</item>
        <item>Live worms, Daphnia, etc.</item>
        <item>Live fish.</item>
        <item>Vegetarian.</item>
    </string-array>
    <string-array name="description_reproduction">
        <item>Egglayer.</item>
        <item>Livebearer.</item>
        <item>Mouthbrooder.</item>
    </string-array>
    <string-array name="description_aquarium_lighting">
        <item>Bright with occ /-falta algo aqui-/.</item>
        <item>Bright, no sunlight.</item>
        <item>As dark as possible as long as fisher are visible.</item>
    </string-array>
    <string-array name="description_temperament">
        <item>Peacefull community fish.</item>
        <item>Not recommended for begginer.</item>
    </string-array>
    <string-array name="description_aquarium_setup">
        <item>Densely planted aquarium.</item>
        <item>Rocks; no plants.</item>
        <item>Only gravel on bottom</item>
        <item>Rock, plants and driftwood</item>
    </string-array>
    <string-array name="description_swimming_habits">
        <item>Botton swimmer.</item>
        <item>No special swimming level.</item>
        <item>Top Swimmer.</item>
        <item>Swims in middle of water.</item>
    </string-array>
    <string-array name="description_other">
        <item>Relative acidity/alkalinity of water. Above 7.0 is alakaline. Bellow 7.0 is acidic.</item>
        <item>Hardness of water according to German scale. The lower the number, the softer the water.</item>
        <item>Temperature in degrees Centigrade.</item>
        <item>Maximum lenght to which the fish grows (in centimeters).</item>
        <item>Capacity (in liters) of smallest aquarium in which fish may be kept.</item>
    </string-array>
    <!-- \\Helpe Strings -->

    <string name="title_activity_list_all">ListAllActivity</string>
    <string name="is_empty">Is Empty</string>
    <string name="fish_name_default">Name of fish</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_main">MainActivity</string>

    
</resources>
